--- a/idp/src/main/resources/application.properties
+++ b/idp/src/main/resources/application.properties
@@ -27,3 +27,5 @@ spring.jpa.properties.jadira.usertype.autoRegisterUserTypes = true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.session.store-type=NONE
+
+spring.messages.basename=localizations/messages
