--- a/idp/src/main/resources/application.properties
+++ b/idp/src/main/resources/application.properties
@@ -29,3 +29,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.session.store-type=NONE
 
 spring.messages.basename=localizations/messages
+
+logging.level.org.springframework.data=DEBUG
+
+spring.redis.host=localhost
+spring.redis.password=
+spring.redis.port=6379
