--- a/idp/src/main/resources/application.properties
+++ b/idp/src/main/resources/application.properties
@@ -35,3 +35,5 @@ logging.level.org.springframework.data=DEBUG
 spring.redis.host=localhost
 spring.redis.password=
 spring.redis.port=6379
+
+logging.config=classpath:logback-spring.xml
