--- a/common/common/pom.xml
+++ b/common/common/pom.xml
@@ -26,6 +26,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.huoyun</groupId>
+			<artifactId>log</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 		</dependency>
